.. _2.0.15:

2.0.15 (unreleased)
-------------------

- Changed dateparts widget to use ``type="number"`` instead of default `text`.
  https://github.com/Pylons/deform/issues/442

- Clarify that a sequence type (list, tuple, or x/range) is required for values
  passed into a SelectWidget or RadioChoiceWidget.
  https://github.com/Pylons/deform/issues/385

- Add Docker containerization of Deform and deformdemo as an option for running
  tests, and improve related documentation.

- Add documentation of arbitrary HTML5 attributes for all widgets.
  https://github.com/Pylons/deform/issues/430

- Add usage documentation of Date, DateTime, and Time widgets. Add
  documentation reference to complex data loading, changing widgets, or
  validating data to Colander.


.. _2.0.14:

2.0.14 (2020-08-26)
-------------------

- Field.validate() now raises ``ValidationFailure`` upon peppercorn parse
  failure.
  See https://github.com/Pylons/deform/pull/242

- Bump maskMoney.js to 3.1.1 and use minified version.
  https://github.com/Pylons/deform/issues/412


.. _2.0.13:

2.0.13 (2020-08-25)
-------------------

- ``richtext.pt``: The contents of the ``RichTextWidget``'s <textarea>
  was not HTML-escaped, but now it is.

  Note that unescaped content is still rendered if ``delayed_load`` is
  enabled.  Now, however, to avoid rendering unescaped non-validated
  user input, ``delayed_load`` is ignored when redisplaying a field
  containing an error.
  See https://github.com/Pylons/deform/pull/204

- This time, *really* update select2 widget to version 4.0.13.
  See https://github.com/Pylons/deform/pull/459


.. _2.0.12:

2.0.12 (2020-08-23)
-------------------

- Update select2 widget to version 4.0.13.
  See https://github.com/Pylons/deform/pull/441

- Add the ``structure`` keyword to the autocomplete template's options to stop
  its encoding.
  See https://github.com/Pylons/deform/pull/445

- Use the local HTML element for change event when removing/adding to DOM.