@@ -311,7 +311,14 @@ class TextInputWidget(Widget):
     strip = True
     mask = None
     mask_placeholder = "_"
-    requirements = (("jquery.maskedinput", None),)
+    requirements = ()
+
+    def __init__(self, **kw):
+        super(TextInputWidget, self).__init__(**kw)
+        if getattr(self, "mask", False):
+            self.requirements = tuple(
+                list(self.requirements) + [("jquery.maskedinput", None)]
+            )
 
     def serialize(self, field, cstruct, **kw):
         if cstruct in (null, None):
@@ -1356,7 +1363,14 @@ class CheckedInputWidget(Widget):
     confirm_subject = _("Confirm Value")
     mask = None
     mask_placeholder = "_"
-    requirements = (("jquery.maskedinput", None),)
+    requirements = ()
+
+    def __init__(self, **kw):
+        super(CheckedInputWidget, self).__init__(**kw)
+        if getattr(self, "mask", False):
+            self.requirements = tuple(
+                list(self.requirements) + [("jquery.maskedinput", None)]
+            )
 
     def serialize(self, field, cstruct, **kw):
         if cstruct in (null, None):
